--- a/public/index.html
+++ b/public/index.html
@@ -19,6 +19,7 @@
 <body>
   <noscript>You need to enable JavaScript to run this app.</noscript>
   <div id="root"></div>
+  <script type="text/javascript" src="/caseconverter/static/js/main.217fe3f5.js"></script>
 </body>
 
 </html>
