--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-  <title>React App Wedding 2022 Charlotte & Florian</title>
+  <title>Mariage Charlotte & Florian</title>
 </head>
 
 <body>
